--- a/css/main.css
+++ b/css/main.css
@@ -1516,7 +1516,7 @@ a.btn.text-btn-three {
 }
 
 .price-body h2 {
-	font-size: 70px;
+	font-size: 50px;
 
 	color: #002bb7;
 
@@ -1528,7 +1528,7 @@ a.btn.text-btn-three {
 
 	padding: 0 12px;
 
-	margin-bottom: 15px;
+	/* margin-bottom: 15px; */
 }
 
 .price-body h2 span {
@@ -1536,7 +1536,7 @@ a.btn.text-btn-three {
 
 	bottom: 11px;
 
-	font-size: 14px;
+	font-size: 15px;
 
 	left: 0;
 
@@ -1628,9 +1628,9 @@ span.price-color {
 
 	margin-right: 5px;
 
-	font-size: 16px;
+	font-size: 8px;
 
-	font-weight: 500;
+	font-weight: 100;
 
 	font-family: "Rubik", sans-serif;
 }
@@ -1680,9 +1680,9 @@ span.price-colors {
 
 	text-transform: uppercase;
 
-	font-weight: 500;
+	font-weight: 300;
 
-	font-size: 12px;
+	font-size: 8px;
 
 	line-height: 1;
 
@@ -1714,7 +1714,7 @@ span.price-colors {
 .section-title-white h3 {
 	color: #fff;
 
-	font-size: 50px;
+	font-size: 25px;
 
 	margin-bottom: 30px;
 
@@ -1958,551 +1958,6 @@ span.price-colors {
 
 .chose-row .col-xl-4:last-child .chose-content span::after {
 	display: none;
-}
-
-/* testimonail area */
-
-.testimonail-icon {
-	display: inline-block;
-}
-
-.testimonail-icon i {
-	color: #ff921e;
-}
-
-.testimonail-titles span {
-	float: right;
-
-	display: inline-block;
-
-	color: #002bb7;
-
-	font-size: 18px;
-
-	font-weight: 500;
-}
-
-.testimonail-author {
-	overflow: hidden;
-}
-
-.testimonail-wraper {
-	background: #fff;
-
-	padding: 49px 38px;
-
-	position: relative;
-}
-
-.testimonail-area-three {
-	background: #fff;
-
-	padding: 0;
-}
-
-.testimonail-titles {
-	margin-bottom: 34px;
-}
-
-.testimonail-img {
-	display: inline-block;
-
-	float: left;
-
-	margin-right: 17px;
-}
-
-.testimonail-author h5 {
-	font-size: 16px;
-
-	line-height: 26px;
-
-	color: #000c35;
-
-	margin-bottom: 1px;
-}
-
-.testimonail-author span {
-	color: #002bb7;
-
-	font-size: 14px;
-
-	font-weight: 500;
-
-	line-height: 26px;
-
-	font-family: Rubik;
-}
-
-.testimonail-wraper p {
-	margin-bottom: 29px;
-}
-
-.testimonail-wraper::before {
-	position: absolute;
-
-	left: 11px;
-
-	bottom: -14px;
-
-	height: 14px;
-
-	content: "";
-
-	background: #6d46c8;
-
-	opacity: 0;
-
-	transition: 0.3s;
-
-	-webkit-transition: 0.3s;
-
-	-moz-transition: 0.3s;
-
-	-ms-transition: 0.3s;
-
-	-o-transition: 0.3s;
-
-	right: 14px;
-}
-
-.testimonail-wraper:hover::before,
-.slick-center .testimonail-wraper::before {
-	opacity: 0.6;
-}
-
-.testimonail-wraper::after {
-	background: #6d46c8;
-
-	content: "";
-
-	left: 23px;
-
-	right: 23px;
-
-	bottom: -26px;
-
-	height: 20px;
-
-	position: absolute;
-
-	opacity: 0;
-
-	transition: 0.3s;
-
-	-webkit-transition: 0.3s;
-
-	-moz-transition: 0.3s;
-
-	-ms-transition: 0.3s;
-
-	-o-transition: 0.3s;
-}
-
-.testimonail-area-three .testimonail-wraper::after,
-.testimonail-area-three .testimonail-wraper::before {
-	width: 0px;
-
-	height: 0px;
-
-	position: relative;
-
-	background: transparent;
-}
-
-.testimonail-wraper:hover::after,
-.slick-center .testimonail-wraper::after {
-	opacity: 0.3;
-}
-
-/* testimonail page 3 */
-
-.testimonail-area.testimonail-area-three {
-	border-bottom: 1px solid #a9e0ff;
-}
-
-.testimonail-area-three h4 {
-	font-weight: 400;
-
-	font-size: 20px;
-
-	margin-right: 52px;
-
-	line-height: 30px;
-}
-
-.testimonail-area-three {
-	background: #fff;
-
-	padding: 120px 14px;
-}
-
-.testimonail-area-three p {
-	margin-bottom: 33px;
-}
-
-.testimonail-border {
-	border-bottom: 1px solid #a9e0ff;
-}
-
-/* server area */
-
-.testimonail-area-server .activ-testimonai button {
-	color: #33b5f7;
-
-	font-size: 18px;
-}
-
-.testimonail-area-server .activ-testimonai button {
-	color: #33b5f7;
-
-	font-size: 18px;
-}
-
-/* news feeds */
-
-.news-feed-info {
-	padding: 40px 28px;
-
-	padding-bottom: 0;
-}
-
-.news-feed-mata ul li {
-	display: inline-block;
-
-	margin-right: 10px;
-}
-
-.news-feed-mata ul li {
-	display: inline-block;
-
-	margin-right: 10px;
-}
-
-.news-feed-mata ul li:last-child {
-	margin-right: 0;
-}
-
-.news-feed-mata ul li a {
-	font-size: 14px;
-
-	color: #002bb7;
-
-	font-weight: 500;
-
-	font-family: Rubik;
-
-	text-decoration: none;
-
-	margin-left: 11px;
-}
-
-.news-feed-img img {
-	max-width: 100%;
-}
-
-.news-feed-img {
-	overflow: hidden;
-}
-
-.latest-feed:hover .news-feed-img img {
-	transform: scale(1.1);
-}
-
-.news-date {
-	float: right;
-
-	margin-top: 13px;
-
-	color: #7d859f;
-}
-
-.news-feed-mata ul {
-	margin: 0;
-
-	padding: 0;
-
-	overflow: hidden;
-
-	display: inline-block;
-}
-
-.news-date span {
-	color: #7d859f;
-
-	font-size: 14px;
-
-	font-weight: 400;
-}
-
-.news-feed-titles h4 {
-	margin-top: 22px;
-
-	margin-bottom: 16px;
-}
-
-.news-feed-titles h4 a {
-	color: #000c35;
-
-	text-decoration: none;
-}
-
-.news-feed-titles h4 a:hover {
-	color: #002bb7;
-}
-
-.news-feed-bottom-img img {
-	max-width: 100%;
-}
-
-/* brand */
-
-.single-brand img {
-	display: inline-block;
-}
-
-.single-brand {
-	text-align: center;
-}
-
-.brand-border {
-	border-top: 1px solid #a9e0ff;
-}
-
-/* 19. Blog */
-
-.potsbox_single {
-	padding: 35px;
-}
-
-.latest-news {
-	position: relative;
-}
-
-.news__thumb img {
-	width: 100%;
-}
-
-.postbox__thumb img {
-	width: 100%;
-}
-
-.blog-inner-img img {
-	width: 100%;
-}
-
-.news-meta span {
-	font-weight: 500;
-
-	letter-spacing: 2px;
-
-	text-transform: uppercase;
-
-	color: #747691;
-
-	margin-right: 15px;
-
-	font-size: 13px;
-}
-
-.news-meta span a {
-	color: #747691;
-}
-
-.news-meta span a:hover {
-	color: #002bb7;
-}
-
-.news__caption h2 {
-	font-size: 24px;
-
-	margin-bottom: 15px;
-
-	line-height: 1.4;
-}
-
-.news__caption h2 a:hover {
-	color: #002bb7;
-}
-
-.news-link {
-	font-size: 12px;
-
-	color: #e4ecf3;
-
-	font-weight: 500;
-
-	text-transform: uppercase;
-
-	letter-spacing: 2px;
-}
-
-.news-link:hover {
-	color: #ffffff;
-}
-
-.news-link i {
-	transition: 0.3s;
-
-	display: inline-block;
-}
-
-.news-link:hover i {
-	transform: translateX(3px);
-}
-
-.news__thumb-2 img {
-	width: 100%;
-}
-
-.news__caption-2 {
-	padding: 33px;
-}
-
-.news__caption-2 h2 {
-	font-size: 20px;
-
-	margin-bottom: 15px;
-}
-
-.news__caption-2 h2 a:hover {
-	color: #002bb7;
-}
-
-.news__caption-2 p {
-	margin-bottom: 0;
-}
-
-.news-meta span {
-	text-transform: uppercase;
-
-	margin-right: 25px;
-
-	font-size: 13px;
-}
-
-@media only screen and (min-width: 992px) and (max-width: 1200px) {
-	.news-meta span {
-		margin-right: 10px;
-	}
-}
-
-.news-meta span a {
-	color: #002bb7;
-
-	letter-spacing: 2px;
-
-	font-weight: 500;
-}
-
-.postbox__thumb {
-	position: relative;
-}
-
-.postbox__thumb a img {
-	max-width: 100%;
-}
-
-.post-meta span {
-	font-size: 12px;
-
-	letter-spacing: 2px;
-
-	font-weight: 500;
-
-	text-transform: uppercase;
-
-	margin-right: 20px;
-}
-
-@media (max-width: 767px) {
-	.post-meta span {
-		margin-right: 10px;
-	}
-}
-
-.post-meta span a:hover {
-	color: #002bb7;
-}
-
-.post-meta span i {
-	color: #002bb7;
-
-	margin-right: 2px;
-}
-
-.post-meta span a {
-	color: #7d859f;
-}
-
-.postbox__text {
-	background: #fff;
-}
-
-.p-50 {
-	padding: 50px;
-}
-
-@media only screen and (min-width: 992px) and (max-width: 1200px) {
-	.p-50 {
-		padding: 30px;
-	}
-}
-
-@media (max-width: 767px) {
-	.p-50 {
-		padding: 30px;
-	}
-}
-
-.p-30 {
-	padding: 30px;
-}
-
-.post-meta {
-	margin-bottom: 20px;
-}
-
-.blog-title {
-	font-size: 28px;
-
-	line-height: 1.3;
-
-	margin-bottom: 20px;
-}
-
-.blog-title a:hover {
-	color: #002bb7;
-}
-
-.read-more {
-	font-size: 12px;
-
-	text-transform: uppercase;
-
-	font-weight: 500;
-}
-
-.read-more {
-	color: #002bb7;
-}
-
-.read-more:hover {
-	color: #002bb7;
-}
-
-.read-more i {
-	transition: 0.3s;
-
-	display: inline-block;
-}
-
-.blog-title-sm {
-	font-size: 20px;
-
-	margin-bottom: 10px;
-
-	line-height: 1.5;
 }
 
 .postbox__gallery .slick-arrow {
