--- a/css/main.css
+++ b/css/main.css
@@ -4883,14 +4883,15 @@ option {
 
 .alert {
 	width: 100%;
-	height: 10rem;
+	height: auto;
+	min-height: 10rem;
 	background-color: red;
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
 	align-items: center;
 	text-align: center;
-	padding: 0 0;
+	padding: 4rem 0;
 	display: none;
 	transition: all 1s ease;
 }
