--- a/css/main.css
+++ b/css/main.css
@@ -4757,7 +4757,8 @@ p.privacy-color {
 }
 
 .basic-login input,
-select {
+select,
+textarea {
 	width: 100%;
 
 	height: 60px;
@@ -4770,7 +4771,9 @@ select {
 
 	margin-bottom: 20px;
 }
-
+textarea {
+	height: 100px;
+}
 .basic-login label,
 option {
 	color: #222;
@@ -4924,13 +4927,18 @@ option {
 	display: flex;
 	justify-content: start;
 	align-items: center;
-	font-size: 3rem;
+	font-size: 2rem;
 }
 @media screen and (min-width: 1000px) {
 	.cartItemWrapper {
 		font-size: 2rem;
 		/* border: 1px solid black; */
 		padding: 1rem;
+	}
+	.total {
+		/* background-color: red; */
+
+		font-size: 3rem;
 	}
 }
 #notes {
